KD-207 - OKM Annual statistics
Generates the required statistics dictated in http://tilastot.kirjastot.fi/fi-FI/vuositilastot.aspx
Statistics can be exported as .csv, .tab and .ods.

Displays them as HTML in reports/okm_reports.pl.
Reports must be generated using the server-side script misc/statistics/generateOKMAnnualStatistics.pl.

TEST SETUP:
0. See reports/okm_reports.pl -> help for information on how to define statistical groups and juvenile material.

TEST PLAN, VIEW:

1. Go to reports/reports-home.pl, observe that a new section "Vaara-kirjastot" has appeared.
2. Go to reports/okm_reports.pl. Read the help file by clicking on the "Help"-link on the top right.
3. Fetch the statistics by selecting the desired year and clicking "Give me statistics".
   There should be no statistics for the given year and you should be greeted with an error saying to run the
   misc/statistics/generateOKMAnnualStatistics.pl -script to generate those statistics.
4. Run misc/statistics/generateOKMAnnualStatistics.pl --year 2014 --rebuild
5. Fetch again the desired statistical year.
   See the displayed html table and verify that the given numbers are correct.

TEST PLAN, EXPORT:

1. Go to reports/okm_reports.pl.
2. Select the desired year and export as .csv.
3. Open/Import the .csv-file with Libre/OpenOffice and observe that columns and headers are nicely separated.
4. Export as .ods and open the .ods-file with Libre/OpenOffice. Make sure the columns and headers are properly
   aligned.
5. .tab-file export is the same as .csv import.
6. Set the year to 3100 and export any format.
7. Observe a warning about non-generated statistics and on how to generate OKM reports.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/reports-home.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/reports-home.tt
@@ -58,6 +58,11 @@
 		<li><a href="/cgi-bin/koha/reports/catalogue_out.pl">Items with no checkouts</a></li>
 	</ul>
 	
+    <h2>Vaara-kirjastot</h2>
+	<ul>
+		<li><a href="/cgi-bin/koha/reports/okm_reports.pl">OKM annual report</a></li>
+	</ul>
+
 	<h2>Other</h2>
 	<ul>
 		<li><a href="/cgi-bin/koha/reports/itemslost.pl">Items lost</a></li>
