KD-214 - Exporting reviews to Liferay
This feature makes it possible to export reviews in the format configured as our Liferay Structured Article.

TEST SETUP:

0. Zero, nada, none!

TEST PLAN:

1. Make a review/comment for a biblio.
2. Go to reviews/reviewswaiting.pl
3. Accept the review/comment you just created.
4. In "Approved comments" -tab, observe a new link "Export" in addition to "Unapprove" and "Delete".
5. Open the "Export"-link to a new tab or window.
6. Right click your mouse button, choose "View page source".
7. In the popup window, copy all HTML code, this is the HTML representation of this review in Liferay.
8. Paste the HTML code to the Liferay's Asset Publisher and configure to taste. Make sure the Asset Publisher
   is in the HTML-mode!!
9. Save and behold the new exported review in action!

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reviews/reviewswaiting.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reviews/reviewswaiting.tt
@@ -55,6 +55,7 @@
         <td>
             [% IF ( status ) %]<a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=unapprove&amp;reviewid=[% review.reviewid %]">Unapprove</a>[% ELSE %]<a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=approve&amp;reviewid=[% review.reviewid %]">Approve</a>[% END %] |
             <a href="/cgi-bin/koha/reviews/reviewswaiting.pl?op=delete&amp;reviewid=[% review.reviewid %]">Delete</a>
+            | <a href="/cgi-bin/koha/svc/OPLIB/review?biblionumber=[% review.biblionumber %]&amp;borrowernumber=[% review.borrowernumber %]">Export</a>
         </td>
     </tr>
     [% END %]</tbody>
