Bug 4283 - Merge bibliographic records
Adds a GUI for deduplicating regions of the biblionumber space in Koha. Deduplication happens using the given
C4::Matcher. Deduplicated biblionumber slice is limited with LIMIT- and OFFSET-clauses as well as a starting
biblionumber by C4::Biblio::GetBiblionumberSlice().

Deduplication search has the following defaults: Limit = 500, Offset = 0, Matcher = the lowest matcher_id in DB.

The speed of the deduplication process is mostly influenced by the complexity of the Matcher, but the GUI can
handle a limit of ~1000 relatively well with a Matcher using ~7 match points taking a couple of minutes.

From the deduplication GUI, merging is done with the lists-based cataloguing/merge.pl -tool.

Also included a misc/maintenance/deduplicator.pl -script to find all the duplicate records.
-This tool can also automatically merge records, simply moving all attached Items, Subscriptions, Acquisitions,
 Holds etc. to the target biblio, defined by a target finding algorithm, and deleting all other matching Biblios.
 Needless to say this feature is EXTREMELY DANGEROUS, even with a properly configured matcher and a good
 understanding of the underlying Bibliographic solutions.
 Using an automatic merger with just an author-based matcher will DESTROY your bibliographic records DB.

-!-!-!-!-!-!-!-!-!-
-TEST PREPARATION:-
-!-!-!-!-!-!-!-!-!-

-2. Define/choose a Matcher from the admin/matching-rules.pl. For tutorial purposes use the default ISBN-based
    Matcher.
-1. Add two or more Bibliographic records, each having the same ISBN. Note the biblionumbers.
 0. Reindex the search index.

-!-!-!-!-!-!-
-TEST  PLAN:-
-!-!-!-!-!-!-

1. Go to cataloguing home (cataloguing/addbooks.pl) and observe a new toolbar item, "Deduplicator"! Go there!
2. In the deduplicator.pl, choose your Matcher and "Deduplicate!". This uses the default values.
2.a. If you don't get any results, enter the smaller biblionumber of the recently added duplicate ISBN Biblios'
     t

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbooks.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/addbooks.tt
@@ -69,6 +69,9 @@
                 [% END %]
             </ul>
         </div>
+        <div class="btn-group">
+            <a href="/cgi-bin/koha/cataloguing/deduplicator.pl"><button class="btn btn-small">Deduplicator</button></a>
+        </div>
   </div>
 [% END %]
 
