--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/cataloguing/batchOverlay.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/cataloguing/batchOverlay.tt
@@ -16,6 +16,12 @@
             the record changed during merging. You can also directly open a MARC-editing view by clicking the report title biblionumbers.</p>
         <b>A permission "tools => stage_marc_import" is needed to use this tool.</b>
     </span>
+    <h4>Using the "Encoding level" -report</h4>
+    <p>
+        The "Encoding level" -report is used to find records still pending fully catalogued record overlay. The recommended levels are something
+        less than 4. The acquisition records are of level 8 and the fully catalogued records are of level 4. The limit-input can be used to limit
+        the returned results to make the report run faster. On large result sets the report might timeout the connection and fail.
+    </p>
 </p>
 <p>
     <h4>Typical error scenarios</h4>
