Bug 12085 - Allow staff to place multiple reserves for the same patron. Fix wrong branch from hold-transfer-slip.pl
1. Place lots of reservations for one borrower to be picked up from multiple branches.
2. Start checking the books in and catching the resevations.
3. Observe that the hold-transfer-slip is always for the first unsatisfied hold for the biblionumber, regardless
   of which hold is received. This only appears when checking-in multiple same biblios.

This patch fixes that.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -346,7 +346,7 @@ $(document).ready(function () {
         <form method="post" action="returns.pl" class="confirm">
             [% IF ( transfertodo ) %]
                 <input type="submit" class="approve" value="Confirm hold and transfer" />
-                <input type="submit" value="Print slip, transfer, and confirm" class="print" onclick="Dopop('hold-transfer-slip.pl?transfer=1&amp;borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;op=slip'); this.form.submit();" />
+                <input type="submit" value="Print slip, transfer, and confirm" class="print" onclick="Dopop('hold-transfer-slip.pl?transfer=1&amp;borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;reserve_id=[% reserved.reserve_id %]&amp;op=slip'); this.form.submit();" />
             [% ELSE %]
                 <input type="submit" class="approve" value="Confirm hold" />
                 <input type="submit" value="Print slip and confirm" class="print" onclick="Dopop('hold-transfer-slip.pl?borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;op=slip'); this.form.submit();" />
