KD-139: restored missing functionality & fixes
Changes:

Restored the collection return feature that had all implementation done in the module, but
  was left out from the initial releases. Includes some fixes to the error presentation of
  this feature.

In response to user reports with regards to the transfer functionality:
  Removed unwanted restrictions on the transfer functionality to prevent situations
  where the Koha core transferbook-routine fail conditions might leave items in a state
  where a manual admin intervention would be needed to fix items statuses. The transferbook
  may now fail without interfering with the homebranch and transfer status changes to the items.
  This leaves more responsibility to the user side with regards to the safety of the transfers.

Templates:
  - Added translation support for the javascript messages as per Koha coding guidelines.
  - Changed the table headers in addItems.tt and rotatingCollections.tt to be more in line
    with similiar tables around Koha.
  - Changed the collection title header from 'Title' to 'Collection' to support the translation.
  - Other small fixes.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/addItems.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/rotating_collections/addItems.tt
@@ -14,8 +14,10 @@
             var selectedItemTitle = this.getAttribute("data-title");
             if (selectedItemBarcode) {
               $("#barcode").val(selectedItemBarcode);
-              $("#modal-remove-body-message").text("Please confirm the removal of item with the barcode: " + selectedItemBarcode
-                                            + " and title: " + selectedItemTitle + " from the collection: " + "[% colTitle %]");
+              $("#modal-remove-body-message").text(_("Please confirm the removal of item with the barcode: ")
+                                            + selectedItemBarcode
+                                            + _(" and title: ") + selectedItemTitle
+                                            + _(" from the collection: ") + "[% colTitle %]");
               $("input[name^=removeItem]").prop('checked', true);
             }
           });
@@ -26,8 +28,8 @@
             var selectedItemOrigin = this.getAttribute("data-originbranch");
             if (selectedItemNumber && selectedItemTitle && selectedItemOrigin) {
               $("#btn-return-item-confirm").attr("data-itemnumber", selectedItemNumber)
-              $("#modal-return-body-message").text("Please confirm the return of the item '" + selectedItemTitle
-                                            + "' to  " + selectedItemOrigin);
+              $("#modal-return-body-message").text(_("Please confirm the return of the item '")
+                                            + selectedItemTitle + _("' to  ") + selectedItemOrigin);
             }
           });
 
@@ -35,7 +37,7 @@
             var selectedItemNumber = this.getAttribute("data-itemnumber");
             var selectedItemTitle = this.getAttribute("data-title");
             if (selectedItemNumber) {
-              $("#modal-transfer-item-body-message").text("Please select a transfer location for the item: " + selectedItemTitle);
+              $("#modal-transfer-item-body-message").text(_("Please select a transfer location for the item: ") + selectedItemTitle);
               $("#btn-transfer-item-confirm").attr("data-itemnumber", selectedItemNumber);
             }
           });
@@ -47,8 +49,8 @@
             var collectionTransferTo = $("select[id=transfer-branch]").val();
             if (collectionId && collectionTransferTo) {
               $("#btn-transfer-confirm").attr("data-transferto", collectionTransferTo);
-              $("#modal-transfer-body-message").text("Please confirm the transfer of collection \'"
-                                                      + collectionTitle + "\' to "
+              $("#modal-transfer-body-message").text(_("Please confirm the transfer of collection ")
+                                                      + collectionTitle + _(" to ")
                                                       + collectionTransferText);
             }
           });
@@ -255,9 +257,9 @@
                 <th>Home library</th>
                 <th>Current location</th>
                 <th>Transferred</th>
-                <th class="nosort">Transfer</th>
-                <th class="nosort">Return</th>
-                <th class="nosort">Remove</th>
+                <th class="nosort"></th>
+                <th class="nosort"></th>
+                <th class="nosort"></th>
               </tr>
             </thead>
             [% FOREACH collectionItemsLoo IN collectionItemsLoop %]
